# SRIL_Lab

rotary_encoder/: package.xml  setup.cfg  setup.py
rotary_encoder/rotary_encoder/: angle_logger_serial.py  angle_plotter.py  angle_plotter_serial.py  angle_publisher.py  angle_publisher_serial.py
